--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h2>Contact</h2>
             <div class="group" id="contact">
                 <div class="item">
-                    <form action="#" method="POST">
+                    <form action="https://formspree.io/f/mjvjvyal" method="POST">
                         <label for="user-name">Name:</label>
                         <input id="user-name" type="text" name="name">
 
