--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section>
             <div class="group">
                 <div class="item">
-                    <img src="\photos\intropic.png" alt="intro photo square" class="image-enhanced" width="300px">
+                    <img src="/photos/intropic.png" alt="intro photo square" class="image-enhanced" width="300px">
                 </div>
                 <div class="item">
                     <h1>안녕하세요!!</h1>
@@ -73,7 +73,7 @@
                     </p>
                 </div>
                 <div class="item">
-                    <img src="\photos\aboutme.png" alt="about me image" class="image-enhanced">
+                    <img src="/photos/aboutme.png" alt="about me image" class="image-enhanced">
                 </div>
         </section>
 
