--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </p>
                 </div>
                 <div class="item">
-                    <img src="/photos/aboutme.png" alt="about me image" class="image-enhanced">
+                    <img src="photos/aboutme.png" alt="about me image" class="image-enhanced">
                 </div>
         </section>
 
