--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             <h2>Portfolio</h2>
             <div class="group" id="portfolio">
                 <div class="item">
-                    <h3><a href="https://github.com/klockodile/locallibrary">Local Library</a></h3>
+                    <h3><a href="https://github.com/klockodile/locallibrary" target="_blank">Local Library</a></h3>
                     <p>My neighborhood decided to put together a local library where people can lend and borrow books. Tasked with building
                         the algorithms based on datasets, the key features is an organized dashboard that shows which books are available,
                         which are checked out, and other general statistics.</p>
                 </div>
                 <div class="item">
-                    <h3><a href="https://github.com/klockodile/decoder-ring">Decoder Ring</a></h3>
+                    <h3><a href="https://github.com/klockodile/decoder-ring" target="_blank">Decoder Ring</a></h3>
                     <p>This project is an application built to encode and decode all kinds of messages in a variety of ways. </p>
                 </div>
             </div>
@@ -102,21 +102,21 @@
                 <div class="item">
                     <form action="https://formspree.io/f/mjvjvyal" method="POST">
                         <label for="user-name">Name:</label>
-                        <input id="user-name" type="text" name="name">
+                        <input id="user-name" type="text" name="name" required>
 
                         <label for="user-email">Email:</label>
-                        <input id="user-email" type="text" name="email">
+                        <input id="user-email" type="text" name="email" required>
 
                         <label for="user-message">Message:</label>
-                        <textarea id="user-message" name="message"></textarea>
-                        <button type="submit">Submit</button>
+                        <textarea id="user-message" name="message" required></textarea>
+                        <button type="submit" target="_blank">Submit</button>
                     </form>
                 </div>
                 <div class="item item-double">
                     <p>Phone #: <a href="tel:520-850-8836">520.850.8836</a></p>
-                    <p>Email: <a href="mailto:aklocko@gmail.com">aklocko@gmail.com</a>
-                        <p>Linkedin: <a href="https://www.linkedin.com/in/aklocko/">April Klocko</a> </p>
-                        <p>Github: <a href="https://github.com/klockodile">Klockodile</a> </p>
+                    <p>Email: <a href="mailto:aklocko@gmail.com" target="_blank">aklocko@gmail.com</a>
+                        <p>Linkedin: <a href="https://www.linkedin.com/in/aklocko/" target="_blank">April Klocko</a> </p>
+                        <p>Github: <a href="https://github.com/klockodile" target="_blank">Klockodile</a> </p>
                     <p>
                 </div>
             </div>
