--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
             <h2>Portfolio</h2>
             <div class="group" id="portfolio">
                 <div class="item">
-                    <img src="https://ankitasattire.files.wordpress.com/2014/06/staytuned.jpg" alt="Local Library" class="rounded">
+                    <img src="https://ankitasattire.files.wordpress.com/2014/06/staytuned.jpg" alt="Local Library" class="rounded" width="350">
                     <h3><a href="https://github.com/klockodile/locallibrary" target="_blank">Local Library</a></h3>
                     <p>My neighborhood decided to put together a local library where people can lend and borrow books. Tasked with building
                         the algorithms based on datasets, the key features is an organized dashboard that shows which books are available,
                         which are checked out, and other general statistics.</p>
                 </div>
                 <div class="item">
-                    <img src="https://ankitasattire.files.wordpress.com/2014/06/staytuned.jpg" alt="Decoder Ring" class="rounded">
+                    <img src="https://ankitasattire.files.wordpress.com/2014/06/staytuned.jpg" alt="Decoder Ring" class="rounded" width="350">
                     <h3><a href="https://github.com/klockodile/decoder-ring" target="_blank">Decoder Ring</a></h3>
                     <p>This project is an application built to encode and decode all kinds of messages in a variety of ways. </p>
                 </div>
