--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2>Portfolio</h2>
             <div class="group" id="portfolio">
                 <div class="item">
-                    <img src="photos/staytuned.jpeg" alt="Local Library" class="rounded">
+                    <img src="photos/staytuned.jpg" alt="Local Library" class="rounded">
                     <h3><a href="https://github.com/klockodile/locallibrary" target="_blank">Local Library</a></h3>
                     <h4><a href="https://klockodile.github.io/locallibrary/" target="_blank">see it in action!</a></h4>
 
@@ -92,7 +92,7 @@
                         which are checked out, and other general statistics.</p>
                 </div>
                 <div class="item">
-                    <img src="photos/staytuned.jpeg" alt="Decoder Ring" class="rounded">
+                    <img src="photos/staytuned.jpg" alt="Decoder Ring" class="rounded">
                     <h3><a href="https://github.com/klockodile/decoder-ring" target="_blank">Decoder Ring</a></h3>
                     <h4><a href="https://klockodile.github.io/decoder-ring/" target="_blank">see it in action!</a></h4>
                     <p>This project is an application built to encode and decode all kinds of messages in a variety of ways. </p>
