--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </p>
 
                     <p>Thinkful has been a great learning tool to introduce me to the world of programming. I would love to get in contact
-                        and start a new project or come onto a team. 
+                        and start a new project or come onto a team. My skills include frontend Javascript and HTML/CSS
                     </p>
                 </div>
                 <div class="item">
@@ -89,13 +89,13 @@
 
                     <p>My neighborhood decided to put together a local library where people can lend and borrow books. Tasked with building
                         the algorithms based on datasets, the key features is an organized dashboard that shows which books are available,
-                        which are checked out, and other general statistics.</p>
+                        which are checked out, and other general statistics. This project makes use of javascript and html/css.</p>
                 </div>
                 <div class="item">
                     <img src="photos/staytuned.jpg" alt="Decoder Ring" class="rounded">
                     <h3><a href="https://github.com/klockodile/decoder-ring" target="_blank">Decoder Ring</a></h3>
                     <h4><a href="https://klockodile.github.io/decoder-ring/" target="_blank">see it in action!</a></h4>
-                    <p>This project is an application built to encode and decode all kinds of messages in a variety of ways. </p>
+                    <p>This project is an application built to encode and decode all kinds of messages in a variety of ways. This project makes use of javascript and html/css.</p>
                 </div>
             </div>
         </section>
