--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section>
             <div class="group">
                 <div class="item">
-                    <img src="photos/intropic.png" alt="intro photo square" class="image-enhanced" width="300px">
+                    <img src="photos/intropic.png" alt="intro photo square" class="image-enhanced">
                 </div>
                 <div class="item">
                     <h1>안녕하세요!!</h1>
@@ -72,6 +72,7 @@
                         and start a new project or come onto a team. My skills include frontend Javascript and HTML/CSS
                     </p>
                 </div>
+             </div>
                 <div class="item">
                     <img src="photos/aboutme.png" alt="about me image" class="image-enhanced">
                 </div>
@@ -114,7 +115,7 @@
 
                         <label for="user-message">Message:</label>
                         <textarea id="user-message" name="message" required></textarea>
-                        <button type="submit" target="_blank">Submit</button>
+                        <button type="submit">Submit</button>
                     </form>
                 </div>
                 <div class="item item-double">
