--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                     <p>I'm just a woman trying to make her way and picking up hobbies and friends on my way. Dancing Latin dances has made its way
                         into my heart but I have also found a new love for roller skating. Though I'm still not very sturdy on wheels, I am 
-                        determined to learn because the next stop is to learn urban mushing with the love of my life, my furbaby, Lady. 
+                        determined to learn because the next step is to learn urban mushing with the love of my life, my furbaby, Lady. 
                     </p>
 
                     <P>My last, personal passion is taking care of my daughter, Lady. Though she came into my life under uncertain circumstances,
